# xub

./: .gitignore  Cargo.toml  README.md
src/: main.rs  post.rs  post_list.rs  posts.rs  router.rs  templates.rs  write.rs
src/templates/: components.rs  footer.rs  layout.rs  navbar.rs  pages.rs
src/templates/components/: layout.rs  navbar.rs  post.rs
src/templates/pages/: login.rs  logout.rs  post.rs  post_list.rs  write.rs
