[package]
name = "xub"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-sessions = "0.14.0"
chrono = "0.4.42"
pulldown-cmark = "0.13.0"
html-escape = "0.2"
serde-saphyr = "0.0.7"
